@@ -372,8 +372,10 @@ _jit_getarg_d(jit_state_t *_jit, jit_int32_t u, jit_node_t *v)
 	jit_ldxi_f(u, JIT_FP, -8);
 	jit_ldxi_f(u + 1, JIT_FP, stack_framesize);
     }
-    else
-	jit_ldxi_d(u, JIT_FP, v->u.w);
+    else {
+	jit_ldxi_f(u, JIT_FP, v->u.w);
+	jit_ldxi_f(u + 1, JIT_FP, v->u.w + 4);
+    }
 }
 
 void
@@ -455,7 +457,10 @@ _jit_pushargr_d(jit_state_t *_jit, jit_int32_t u)
 	_jitc->function->call.size += sizeof(jit_float32_t);
     }
     else {
-	jit_stxi_d(_jitc->function->call.size + stack_framesize, JIT_SP, u);
+	jit_stxi_f(_jitc->function->call.size + stack_framesize,
+		   JIT_SP, u);
+	jit_stxi_f(_jitc->function->call.size + stack_framesize + 4,
+		   JIT_SP, u + 1);
 	_jitc->function->call.size += sizeof(jit_float64_t);
     }
 }
@@ -480,7 +485,10 @@ _jit_pushargi_d(jit_state_t *_jit, jit_float64_t u)
 	_jitc->function->call.size += sizeof(jit_float32_t);
     }
     else {
-	jit_stxi_d(_jitc->function->call.size + stack_framesize, JIT_SP, regno);
+	jit_stxi_f(_jitc->function->call.size + stack_framesize,
+		   JIT_SP, regno);
+	jit_stxi_f(_jitc->function->call.size + stack_framesize + 4,
+		   JIT_SP, regno + 1);
 	_jitc->function->call.size += sizeof(jit_float64_t);
     }
     jit_unget_reg(regno);
